--- a/SocialSystem/main/templates/main/base.html
+++ b/SocialSystem/main/templates/main/base.html
@@ -2,19 +2,17 @@
 <html lang="en">
 <head>
     <style type="text/css">
-		.sidenav {
-			height:100%;
-			width:160px;
+		.navbar-light {
 			position: fixed;
 			z-index:1;
 			top:0;
 			left:0;
-			background-color:#111;
+			background-color:#901111;
 			overflow-x: :hidden;
 			padding-top:20px;
 		}
 
-		.sidenav a {
+		.nav-item a {
 			padding:6px 8px 6px 16px;
 			text-decoration: none;
 			font-size:25px;
@@ -22,7 +20,7 @@
 			display:block;
 		}
 
-		.sidenav a:hover{
+		.nav a:hover{
 			color:#f1f1f1;
 		}
 
@@ -31,39 +29,63 @@
 			padding: 0px 10px;
 		}
 
-	</style>
+
+
+
+    </style>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>{% block title %}Tim's Site{% endblock %}</title>
 </head>
 
 <body>
-    <div class="sidenav">
-		<a href="/">Home</a>
-		{% if user.is_authenticated %}
-			<a href="/create">Create</a>
-			<a href="/tasks">Tasks</a>
-			<a href="/logout">Logout</a>
-		{% else %}
-			<a href="/login">Login</a>
-			<a href="/register">Register</a>
-		{% endif %}
-	</div>
-    <div id="content" name="content" class="main">
-		<div class="row justify-content-center">
-			<div class="col-8">
-				<h1 class="mt-2">My Site</h1>
-				<hr class="mt-0 mb-4">
-				{% block content %}
-				{% endblock %}
-			</div>
-		</div>
-	</div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<nav class="navbar navbar-light navbar-expand-md fixed-top">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">SocialSystem</a>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="">Home</a>
+                </li>
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/create">Create</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/tasks">Tasks</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/register">Register</a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
+<div id="content" name="content" class="main">
+    <div class="row justify-content-center">
+        <div class="col-8">
+            <h1 class="mt-2">My Site</h1>
+            <hr class="mt-0 mb-4">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
