--- a/SocialSystem/main/templates/main/create.html
+++ b/SocialSystem/main/templates/main/create.html
@@ -1,12 +1,12 @@
 {% extends 'main/base.html' %}
-{% block title %}Create Task{% endblock %}
+{% block title %}Создание вакансии{% endblock %}
 {% load crispy_forms_tags %}
  
 {% block content %}
-	<h3>Create New Task</h3>
+	<h3>Форма новой вакансии</h3>
      <form method="post" action="/create/" class="form-group">
          {% csrf_token %}
          {{ form|crispy }}
-         <button type="submit" name="save" class="btn btn-success">Create New</button>
+         <button type="submit" name="save" class="btn btn-success">Создать</button>
     </form>
 {% endblock %}
