--- a/SocialSystem/main/templates/main/create.html
+++ b/SocialSystem/main/templates/main/create.html
@@ -4,7 +4,7 @@
  
 {% block content %}
 	<h3>Форма новой вакансии</h3>
-     <form method="post" action="/create/" class="form-group">
+     <form method="post" enctype="multipart/form-data" class="form-group">
          {% csrf_token %}
          {{ form|crispy }}
          <button type="submit" name="save" class="btn btn-success">Создать</button>
