--- a/SocialSystem/register/templates/registration/login.html
+++ b/SocialSystem/register/templates/registration/login.html
@@ -6,7 +6,7 @@
     <form method="POST" class="form-group">
         {% csrf_token %}
         {{ form|crispy }}
-        <p>Don't have an account? Create one <a href="/register">here</a></p>
+        <p>Нет аккаунта? Создайте <a href="/register">тут</a></p>
         <button type="submit" class="btn btn-success">Login</button>
     </form>
 {% endblock %}
