store system page

--- a/SocialSystem/main/templates/main/base.html
+++ b/SocialSystem/main/templates/main/base.html
@@ -47,7 +47,7 @@
 <body>
 <nav class="navbar bg-dark navbar-expand-md fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">SocialSystem</a>
+        <a class="navbar-brand" href="/">Проект поддержки волонтеров</a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 {% if user.is_authenticated %}
