--- a/SocialSystem/main/templates/main/task.html
+++ b/SocialSystem/main/templates/main/task.html
@@ -15,7 +15,7 @@
 </svg>
 {% endif %}
 <p><strong>Описание : </strong>{{task.description}}</p>
-<p><strong>Геокод : </strong>{{task.geocode}}</p>
+<p><strong>Геокод : </strong><img src="{{geopoint}}"></p>
 <p><strong>Время начала : </strong>{{task.beginning}}</p>
 <p><strong>Вознаграждение : </strong>{{task.award}}</p>
 {% if org %}
