--- a/main/templates/main/user_info.html
+++ b/main/templates/main/user_info.html
@@ -15,7 +15,7 @@
 {% endif %}
 <p><strong>О себе : </strong>{{c_user.profile.about}}</p>
 <p><strong>Номер телефона : </strong>{{c_user.profile.phone}}</p>
-<p><strong>Геоточка : </strong> <img src="https://static-maps.yandex.ru/1.x/?ll=37.677751,55.757718&spn=0.016457,0.00619&l=map"></p>
+<p><strong>Геоточка : </strong> WIP</p>
 {% if c_user.id == user.id %}
 <p><a href="/store">Мои льготы</a></p>
 <div class="col-7 themed-grid-col">
