--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <style type="text/css">
-		.navbar-light {
+		.navbar-dark {
 			position: fixed;
 			z-index:1;
 			top:0;
@@ -16,22 +16,26 @@
 			padding:6px 8px 6px 16px;
 			font-size:25px;
 			color: #666666;
-		}
-
-		.navbar-brand {
-			padding:6px 8px 6px 16px;
-			font-size:40px;
-			color: #AAAAAA;
+			width: 100%;
+            max-width: 1000px;
 		}
 
 		.a {
             color: #F000FF;
 		}
+		.navbar-brand {
+                padding: 6px 8px 6px 16px;
+                font-size:10px;
+                color: #AAAAAA;
+		    }
 
-		.main{
-			margin-left:160px;
-			padding: 0px 10px;
-		}
+		@media screen and (min-width:200px) and (max-width:500px) {
+            .navbar-brand {
+                color: #FFFFFF;
+                font-size:5px;
+                padding: 0px;
+		    }
+        }
 
     </style>
 
@@ -41,46 +45,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>{% block title %}Tim's Site{% endblock %}</title>
+    <title>{% block title %}Проект поддержки волонтеров{% endblock %}</title>
 </head>
 
 <body>
-<nav class="navbar bg-dark navbar-expand-md fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Проект поддержки волонтеров</a>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/user_info/{{user.id}}">{{user.last_name}} {{user.first_name}}</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/tasks">Вакансии</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Выйти</a>
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="/login">Войти</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/register">Зарегистрироваться</a>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-</nav>
-<div id="content" name="content" class="main">
-    <div class="row justify-content-center">
-        <div class="col-8">
-            <h1 class="mt-2">My Site</h1>
-            <hr class="mt-0 mb-4">
-            {% block content %}
-            {% endblock %}
-        </div>
-    </div>
+<div class="col-lg-8 mx-auto p-3 py-md-5">
+    <header class="d-flex align-items-center pb-3 mb-5 border-bottom">
+        <nav class="navbar bg-dark navbar-expand fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Проект поддержки волонтеров</a>
+                <div class="collapse navbar-collapse" id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/user_info/{{user.id}}">{{user.last_name}}
+                                {{user.first_name}}</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/tasks">Вакансии</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">Выйти</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/login">Войти</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/register">Зарегистрироваться</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
