--- a/main/templates/main/store.html
+++ b/main/templates/main/store.html
@@ -26,4 +26,14 @@
         </div>
     </div>
 </div>
+<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+  <div class="toast-header">
+    <strong class="me-auto">Bootstrap</strong>
+    <small>11 мин. назад</small>
+    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
+  </div>
+  <div class="toast-body">
+    Привет мир! Это тост-сообщение.
+  </div>
+</div>
 {% endblock %}
