--- a/main/templates/main/tasks.html
+++ b/main/templates/main/tasks.html
@@ -3,13 +3,16 @@
 
 {% block content %}
 <div class="album py-5">
-    <div class="container">
+    <div class="card shadow-sm">
+        <div class="card-header text-white bg-dark text-center">
+            <h5 class="card-title">Доступные вакансии</h5>
+        </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
             {% for task in tasks %}
             <div class="col">
                 <div class="card shadow-sm">
                     {% if task.photo %}
-                        <img src="{{task.photo.url}}" height="225" width="100%">
+                    <img src="{{task.photo.url}}" height="225" width="100%">
                     {% else %}
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                          xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
