--- a/main/templates/main/user_info.html
+++ b/main/templates/main/user_info.html
@@ -2,28 +2,61 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<h1>{{c_user.last_name}} {{c_user.first_name}}</h1>
-{% if c_user.profile.photo %}
-<img src="{{c_user.profile.photo.url}}" width="300" height="300">
-{% else %}
-<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="300" height="300"
-     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-    <rect width="100%" height="100%" fill="#eee"></rect>
-    <text x="40%" y="49%" fill="#aaa" dy=".3em">300x300</text>
-</svg>
-{% endif %}
-<p><strong>О себе : </strong>{{c_user.profile.about}}</p>
-<p><strong>Номер телефона : </strong>{{c_user.profile.phone}}</p>
-<p><strong>Геоточка : </strong> WIP</p>
-{% if c_user.id == user.id %}
-<p><a href="/store">Мои льготы</a></p>
-<div class="col-7 themed-grid-col">
-    <form method="post" enctype="multipart/form-data" class="form-group">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" name="all" value="0" class="btn btn-warning">Изменить</button>
-    </form>
+<div class="row">
+    <div class="col">
+        <div class="card text-white bg-dark mb-3">
+            <div class="card-body">
+                {% if c_user.profile.photo %}
+                <img src="{{c_user.profile.photo.url}}" width="100%" height="400">
+                {% else %}
+                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="100%"
+                     height="400"
+                     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+                    <rect width="100%" height="100%" fill="#eee"></rect>
+                    <text x="40%" y="49%" fill="#aaa" dy=".3em">300x400</text>
+                </svg>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card text-white bg-dark mb-3" style="width: 24rem;">
+            <div class="card-header text-center">
+                <h5 class="card-title">{{c_user.last_name}} {{c_user.first_name}}</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><p><strong>О себе : </strong>{{c_user.profile.about}}</p></li>
+                <li class="list-group-item"><p><strong>Номер телефона : </strong>{{c_user.profile.phone}}</p></li>
+                <li class="list-group-item"><p><strong>Геоточка : </strong>WIP</p></li>
+            </ul>
+        </div>
+
+        {% if c_user.id == user.id %}
+        <hr>
+        <div class="card text-white bg-dark mb-3" style="width: 24rem;">
+            <div class="card-header text-center">
+                <h5 class="card-title">Мои льготы</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item"><p><strong>Баллы : </strong>{{c_user.profile.points}}</p>
+                </li>
+                {% for benefit in benefits %}
+                <li class="list-group-item"><p><strong>{{benefit.name}} : </strong>{{benefit.description}}</p>
+                </li>
+                {% endfor %}
+                <li class="list-group-item"><p><strong><a href="/store">Магазин льгот</a></strong></p>
+                </li>
+            </ul>
+        </div>
+        <div class="col-7 themed-grid-col">
+            <form method="post" enctype="multipart/form-data" class="form-group">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button type="submit" name="all" value="0" class="btn btn-warning">Изменить</button>
+            </form>
+        </div>
+        {% endif %}
+    </div>
 </div>
-{% endif %}
 {% endblock %}
