--- a/main/templates/main/task.html
+++ b/main/templates/main/task.html
@@ -2,45 +2,60 @@
 {% block title %}View List{% endblock %}
 
 {% block content %}
-<h1>{{task.organization.last_name}} {{task.organization.first_name}}</h1>
-<h2>{{task.name}}</h2>
-{% if task.photo %}
-<img src="{{task.photo.url}}" width="750" height="500">
-{% else %}
-<svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
-     xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
-     preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-    <rect width="100%" height="100%" fill="#eee"></rect>
-    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-</svg>
-{% endif %}
-<p><strong>Описание : </strong>{{task.description}}</p>
-<p><strong>Геокод : </strong>WIP</p>
-<p><strong>Время начала : </strong>{{task.beginning}}</p>
-<p><strong>Вознаграждение : </strong>{{task.award}}</p>
-{% if org %}
-{% for person in task.user.all %}
-<div class="row mb-2">
-    <div class="col-1 themed-grid-col"><a href="/user_info/{{person.id}}">{{person.last_name}} {{person.first_name}}</a>
-    </div>
-    <div class="col-1 themed-grid-col">
+<div class="card shadow-sm bg-dark text-white text-center">
+    <h1>{{task.organization.last_name}} {{task.organization.first_name}}</h1>
+    <h2>{{task.name}}</h2>
+</div>
+<div class="card shadow-sm">
+    <div class="card-body">
+        {% if task.photo %}
+        <img src="{{task.photo.url}}" width="100%" height="100%">
+        {% else %}
+        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+             height="500"
+             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+             preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#eee"></rect>
+            <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
+        </svg>
+        {% endif %}
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <p><strong>Описание : </strong>{{task.description}}</p>
+            </li>
+            <li class="list-group-item">
+                <p><strong>Время начала : </strong>{{task.beginning}}</p>
+            </li>
+            <li class="list-group-item">
+                <p><strong>Вознаграждение : </strong>{{task.award}}</p>
+            </li>
+        </ul>
+        {% if org %}
+        {% for person in task.user.all %}
+        <div class="row">
+            <div class="col themed-grid-col">
+                <a href="/user_info/{{person.id}}">{{person.last_name}} {{person.first_name}}</a>
+            </div>
+            <div class="col themed-grid-col">
+                <form method="post" action="">
+                    {% csrf_token %}
+                    <button type="submit" name="kick" value="{{person.id}}" class="btn btn-danger">Отстранить</button>
+                </form>
+            </div>
+        </div>
+        {% endfor %}
         <form method="post" action="">
             {% csrf_token %}
-            <button type="submit" name="kick" value="{{person.id}}" class="btn btn-danger">Отстранить</button>
+            <button type="submit" name="complete" value="0" class="btn btn-success">Завершить</button>
         </form>
+        {% else %}
+        {% if can_take %}
+        <form method="post" action="">
+            {% csrf_token %}
+            <button type="submit" name="take" value="{{user.id}}" class="btn btn-success">Взять вакансию</button>
+        </form>
+        {% endif %}
+        {% endif %}
     </div>
 </div>
-{% endfor %}
-<form method="post" action="">
-    {% csrf_token %}
-    <button type="submit" name="complete" value="0" class="btn btn-success">Завершить</button>
-</form>
-{% else %}
-{% if can_take %}
-<form method="post" action="">
-    {% csrf_token %}
-    <button type="submit" name="take" value="{{user.id}}" class="btn btn-success">Take</button>
-</form>
-{% endif %}
-{% endif %}
 {% endblock %}
