--- a/main/templates/main/store.html
+++ b/main/templates/main/store.html
@@ -3,37 +3,43 @@
 
 {% block content %}
 <div class="album py-5">
-    <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            {% for benefit in benefits %}
-            <div class="col">
-                <div class="card shadow-sm">
-                    <div class="card-body">
-                        <p class="card-text"><strong>{{benefit.name}} : </strong>{{benefit.description}}</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <form method="post" action="">
-                                    {% csrf_token %}
-                                    <button type="submit" name="buy" value="{{user.id}} {{benefit.id}}" class="btn btn-sm btn-outline-secondary">Приобрести</button>
-                                </form>
+    <div class="card shadow-sm">
+        <div class="card-header text-white bg-dark text-center">
+            <h5 class="card-title">Доступные льготы</h5>
+            <hr>
+            <p>Баланс : {{user.profile.points}} баллов</p>
+        </div>
+        <div class="card-body">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
+                {% for benefit in benefits %}
+                <div class="col">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <p class="card-text"><strong>{{benefit.name}} : </strong>{{benefit.description}}</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="btn-group">
+                                    <form method="post" action="">
+                                        {% csrf_token %}
+                                        <button type="submit" name="buy" value="{{user.id}} {{benefit.id}}" class="btn btn-sm btn-outline-secondary">Приобрести</button>
+                                    </form>
+                                </div>
+                                <small class="text-muted">{{benefit.cost}} баллов</small>
                             </div>
-                            <small class="text-muted">{{benefit.cost}} баллов</small>
                         </div>
                     </div>
                 </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
     </div>
 </div>
-<div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-  <div class="toast-header">
-    <strong class="me-auto">Bootstrap</strong>
-    <small>11 мин. назад</small>
-    <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
-  </div>
-  <div class="toast-body">
-    Привет мир! Это тост-сообщение.
-  </div>
-</div>
 {% endblock %}
+
+<div class="card text-white bg-dark mb-3" style="width: 24rem;">
+    <div class="card-header text-center">
+        <h5 class="card-title">123123</h5>
+    </div>
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+
+    </div>
+</div>
