--- a/main/templates/main/tasks.html
+++ b/main/templates/main/tasks.html
@@ -8,7 +8,7 @@
             <h5 class="card-title">Доступные вакансии</h5>
         </div>
         <div class="card-body">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-3">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-3">
                 {% for task in tasks %}
                 <div class="col">
                     <div class="card shadow-sm">
