--- a/register/templates/register/register.html
+++ b/register/templates/register/register.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<form method="POST" class="form-group">21
+<form method="POST" class="form-group">
     {% csrf_token %}
     {{ form|crispy }}
     <p></p>
